#20 - Add import functionality
- Update openApi docs
- Enable returning only converted stagedElements
